--- a/HeartOfGold/Content/MyCss.css
+++ b/HeartOfGold/Content/MyCss.css
@@ -2,11 +2,20 @@
     font-size: 15px;
 }
 .navbar-fontsize {
-    font-size: 20px;
+    font-size: 18px;
     color: #444444;
 }
 
 .well-width {
-    width: 40%;
+    width: 60%;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    text-align: center;
 }
 
