--- a/HeartOfGold/Views/Home/About.cshtml
+++ b/HeartOfGold/Views/Home/About.cshtml
@@ -1,8 +1,21 @@
 ﻿@{
-    ViewBag.Title = "About Us";
+    ViewBag.Title = "Our Mission";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
+
+<div class="container center">
+    <h2>Our Mission</h2>
+    <p class="lead p-margin">
+        Heart of Gold aims to provide a platform for disadvantaged students to acquire living necessities
+    </p>
+</div>
+<hr />
+
+<div>
+    <img src="~/Content/Images/ubuntu.jpg" alt="Ubuntu" class="center-block img-rounded img-center img-responsive" />
+</div>
+
+<br />
 
 <p>
     Lorem ipsum dolor sit amet, praesent fusce ut id cursus morbi. Enim viverra arcu congue, a urna sit ut sem, massa conubia nullam augue integer elit, mattis lacus dictumst tortor enim in. Aliquam vulputate velit litora vitae, in arcu mi adipiscing, aut bibendum mauris nobis libero libero nunc, sit quis et ac eu adipiscing, mauris ante pellentesque suspendisse suspendisse saepe nec. In cum ullamcorper nisl est id, arcu aliquam phasellus, hymenaeos eu consectetuer sem nonummy pede. Sed in, nisl nulla sed molestiae ipsum lacus egestas, sit diam posuere, aenean minima vel ligula sapien elementum. Maecenas aliquam quam ut ultrices est, mauris vel ac aenean, vivamus dolor sapien diam tempus vestibulum, erat convallis suspendisse porttitor eget in. Risus suspendisse in sit risus porta, in lorem leo penatibus, etiam quis etiam dictumst est, neque amet. Ut pharetra, volutpat explicabo massa lorem, per arcu risus nulla quis, amet est ante nunc libero et nec, nam nulla facilisi sed consectetuer lorem. Mattis elementum hendrerit convallis. Molestie et donec, eros ultricies felis.
