--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -2,6 +2,12 @@
     ViewBag.Title = "Home Page";
 }
 
+<div>
+    <img src="~/Content/Images/nmupic.png" alt="Ubuntu" class="center-block img-rounded nmu-img img-responsive" />
+</div>
+<br />
+
+
 <div class="jumbotron">
     <p class="lead"> <strong>Heart of Gold</strong> is a free web service designed for students in the School of ICT at Nelson Mandela University.</p>
     <br />
