--- a/HeartOfGold/Views/Help/ViewHelp.cshtml
+++ b/HeartOfGold/Views/Help/ViewHelp.cshtml
@@ -4,42 +4,44 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3>Stuck? Get help here!</h3>
-<p class="lead">Online help and Frequenty Asked Questions</p>
-<br />
+<div class="container center well-width">
+    <h3>Stuck? Get help here!</h3>
+    <p class="lead">Online help and Frequenty Asked Questions</p>
+    <br />
 
 
-<div class="panel panel-default well-width">
-    <div class="panel-heading"><strong>Question 1</strong></div>
-    <div class="panel-body">
-        Answer...
+    <div class="panel panel-default">
+        <div class="panel-heading"><strong>Question 1</strong></div>
+        <div class="panel-body">
+            Answer...
+        </div>
     </div>
-</div>
 
-<div class="panel panel-default well-width">
-    <div class="panel-heading"><strong>Question 2</strong></div>
-    <div class="panel-body">
-        Answer...
+    <div class="panel panel-default">
+        <div class="panel-heading"><strong>Question 2</strong></div>
+        <div class="panel-body">
+            Answer...
+        </div>
     </div>
-</div>
 
-<div class="panel panel-default well-width">
-    <div class="panel-heading"><strong>Question 3</strong></div>
-    <div class="panel-body">
-        Answer...
+    <div class="panel panel-default">
+        <div class="panel-heading"><strong>Question 3</strong></div>
+        <div class="panel-body">
+            Answer...
+        </div>
     </div>
-</div>
 
-<div class="panel panel-default well-width">
-    <div class="panel-heading"><strong>Question 4</strong></div>
-    <div class="panel-body">
-        Answer...
+    <div class="panel panel-default">
+        <div class="panel-heading"><strong>Question 4</strong></div>
+        <div class="panel-body">
+            Answer...
+        </div>
     </div>
-</div>
 
-<div class="panel panel-default well-width">
-    <div class="panel-heading"><strong>Question 5</strong></div>
-    <div class="panel-body">
-        Answer...
+    <div class="panel panel-default">
+        <div class="panel-heading"><strong>Question 5</strong></div>
+        <div class="panel-body">
+            Answer...
+        </div>
     </div>
 </div>
