--- a/HeartOfGold/Views/Item/Index.cshtml
+++ b/HeartOfGold/Views/Item/Index.cshtml
@@ -21,14 +21,13 @@
 <br />
 <br />
 
-@if (!Model.Any())
+@*@if (!Model.Any())
 {
     <p>We don't have any items in the inventory yet.</p>
 }
 
-else
+else*@
 
-{
     <table id="Inventory" class="table table-bordered table-hover">
         <thead>
             <tr>
@@ -44,17 +43,17 @@ else
             {
                 <tr>
                     <td>@Html.ActionLink(item.Name, "Details", "Item", new { id = item.Id }, null)</td>
-                    <td>@item.Category.Name</td>
+                    <td>@Html.DisplayFor(m => item.Category.Name)</td>
                     <td>@item.Description</td>
                     <td>@item.Quantity</td>
-                    <td>@item.Donor.FirstName @item.Donor.LastName</td>
+                    <td>@Html.DisplayFor(m => item.Donor.FullName)</td>
                 </tr>
             }
         </tbody>
     </table>
     <br />
     <hr />
-}
+
 @section scripts
 {
     <script>
