--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <div>
-    <img src="~/Content/Images/nmupic.png" alt="Ubuntu" class="center-block img-rounded nmu-img img-responsive" />
+    <img src="~/Content/Images/nmupic.png" alt="Nelson Mandela University" class="center-block img-rounded nmu-img img-responsive" />
 </div>
 <br />
 
 
 <div class="jumbotron">
-    <p class="lead"> <strong>Heart of Gold</strong> is a free web service designed for students in the School of ICT at Nelson Mandela University.</p>
+    <p class="lead"> <strong>Heart of Gold</strong> is a web service designed for students in the School of ICT at Nelson Mandela University.</p>
     <br />
     <blockquote>
         <p>For to be free is not merely to cast off one’s chains, but to live in a way that respects and enhances the freedom of others.</p>
