--- a/HeartOfGold/Views/Item/Index.cshtml
+++ b/HeartOfGold/Views/Item/Index.cshtml
@@ -30,7 +30,7 @@ else*@
 
     <table id="Inventory" class="table table-bordered table-hover">
         <thead>
-            <tr>
+            <tr style="background-color:#e6e6e6 ">
                 <th>Donation</th>
                 <th>Category</th>
                 <th>Description</th>
