--- a/HeartOfGold/Views/Shared/_Layout.cshtml
+++ b/HeartOfGold/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Heart of Gold</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -47,7 +47,7 @@
 
 
 
-    <div class="navbar navbar-inverse navbar-fixed-bottom navbar-color">
+    <div class="navbar navbar-inverse navbar-color">
         <div class="navbar-collapse collapse navbar-fontsize center">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Contact Us", "About", "Home")</li>
