--- a/HeartOfGold/Views/Help/ViewHelp.cshtml
+++ b/HeartOfGold/Views/Help/ViewHelp.cshtml
@@ -1,47 +1,47 @@
 ﻿
 @{
-    ViewBag.Title = "ViewHelp";
+    ViewBag.Title = "Help and FAQ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container center well-width">
+<div class="container center help-div-width">
     <h3>Stuck? Get help here!</h3>
-    <p class="lead">Online help and Frequenty Asked Questions</p>
-    <br />
+    <p class="lead">Frequenty Asked Questions</p>
+    <hr />
 
 
     <div class="panel panel-default">
-        <div class="panel-heading"><strong>Question 1</strong></div>
+        <div class="panel-heading">What exactly is Heart of Gold?</div>
         <div class="panel-body">
-            Answer...
+            It is a free-to-use platform for students within the School of ICT at Nelson Mandela University. Students who are disadvantaged can submit a request for items they are in need of.
         </div>
     </div>
 
     <div class="panel panel-default">
-        <div class="panel-heading"><strong>Question 2</strong></div>
+        <div class="panel-heading">How many requests am I allowed to submit?</div>
         <div class="panel-body">
-            Answer...
+            <strong>Two</strong> requests per day. However, exceptions can be made under special circumstances.
         </div>
     </div>
 
     <div class="panel panel-default">
-        <div class="panel-heading"><strong>Question 3</strong></div>
+        <div class="panel-heading">Who can donate to the students?</div>
         <div class="panel-body">
-            Answer...
+            Anyone who wants to!
         </div>
     </div>
 
     <div class="panel panel-default">
-        <div class="panel-heading"><strong>Question 4</strong></div>
+        <div class="panel-heading">How do I know what is happening with my submitted request?</div>
         <div class="panel-body">
-            Answer...
+            At the top of the web page, click on <strong>Student Requests</strong>. Then, select <strong>View My Requests</strong>. The status and progress of your request will be shown here!
         </div>
     </div>
 
     <div class="panel panel-default">
-        <div class="panel-heading"><strong>Question 5</strong></div>
+        <div class="panel-heading">I am still confused about a few things. Who can I contact?</div>
         <div class="panel-body">
-            Answer...
+            You are welcome to contact the website administrator at heartadmin@mandela.ac.za.
         </div>
     </div>
 </div>
