--- a/HeartOfGold/Views/Item/New.cshtml
+++ b/HeartOfGold/Views/Item/New.cshtml
@@ -35,8 +35,8 @@
         @Html.TextBoxFor(m => m.Item.Quantity, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Item.Category)
-        @Html.DropDownListFor(m => m.Item.Category, new SelectList(Model.Categories, "Id", "Name"), "Select Item Category", new { @class = "form-control" })
+        @Html.LabelFor(m => m.Item.CategoryId)
+        @Html.DropDownListFor(m => m.Item.CategoryId, new SelectList(Model.Categories, "Id", "Name"), "Select Item Category", new { @class = "form-control" })
     </div>
     <br />
     @Html.HiddenFor(m => m.Item.Id)
