--- a/HeartOfGold/Views/Shared/_Layout.cshtml
+++ b/HeartOfGold/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
 
 
-    <div class="navbar navbar-inverse navbar-color">
+    <div class="navbar navbar-inverse navbar-color nav-padding">
         <div class="navbar-collapse collapse navbar-fontsize center">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Contact Us", "About", "Home")</li>
