Initial implementation of donor functionality

--- a/HeartOfGold/Content/MyCss.css
+++ b/HeartOfGold/Content/MyCss.css
@@ -92,4 +92,13 @@
     color: white;
 }
 
+.field-validation-error{
+    color: red;
+}
+
+.input-validation-error {
+    border-color: red;
+}
+
+
 
