--- a/HeartOfGold/Views/Item/ItemForm.cshtml
+++ b/HeartOfGold/Views/Item/ItemForm.cshtml
@@ -7,9 +7,22 @@
 }
 
 <ol class="breadcrumb">
-    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-    <li>@Html.ActionLink("View Inventory", "Index", "Item")</li>
-    <li class="active">Add New Item</li>
+    <li>
+        <a href="@Url.Action("Index", "Home")">
+            <span class="glyphicon glyphicon-home"></span>
+            &nbsp;Home
+        </a>
+    </li>
+    <li>
+        <a href="@Url.Action("Index", "Item")">
+            <span class="glyphicon glyphicon-th-list"></span>
+            &nbsp;View Inventory
+        </a>
+    </li>
+    <li class="active">
+        <span class="glyphicon glyphicon-save"></span>
+        &nbsp;New Donation
+    </li>
 </ol>
 
 <h3>New Item</h3>
@@ -26,26 +39,36 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Item.Description)
         @Html.TextBoxFor(m => m.Item.Description, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Item.Description)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Item.Donor)
         @Html.DropDownListFor(m => m.Item.Donor, new SelectList(Model.Donors, "Id", "FullName"), "Who donated this item?", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Item.Donor)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Item.Quantity)
         @Html.TextBoxFor(m => m.Item.Quantity, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Item.Quantity)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Item.CategoryId)
         @Html.DropDownListFor(m => m.Item.CategoryId, new SelectList(Model.Categories, "Id", "Name"), "Select Item Category", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Item.CategoryId)
     </div>
     <br />
     @Html.HiddenFor(m => m.Item.Id)
+    @Html.AntiForgeryToken()
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Save Donation</button>
         @Html.ActionLink("Back to Inventory", "Index", "Item", null, new { @class = "btn btn-default" })
     </div>
 </div>
+}
+
+@section scripts
+{
+    @Scripts.Render("~bundles/jqueryval")
 }
 
   
