--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -5,17 +5,29 @@
 <div>
     <img src="~/Content/Images/nmupic.png" alt="Nelson Mandela University" class="center-block img-rounded nmu-img img-responsive" />
 </div>
+<hr />
+
+<div class="container text-center">
+    <h2>Are you a student? Are you struggling?</h2>
+    <p class="lead">Create a request for items that you need. You will be notified when we can help you.</p>
+    <br />
+    <a href="@Url.Action("SubmitRequest", "Request")" class="btn btn-primary btn-lg register-button">
+        <i class="fas fa-user-plus" style="font-size:1.2em"></i>
+        &nbsp;I want to submit a request!
+    </a>
+</div>
 <br />
+<hr />
 
 
-<div class="jumbotron">
+@*<div class="jumbotron">
     <p class="lead"> <strong>Heart of Gold</strong> is a web service designed for students in the School of ICT at Nelson Mandela University.</p>
     <br />
     <blockquote>
         <p>For to be free is not merely to cast off one’s chains, but to live in a way that respects and enhances the freedom of others.</p>
         <footer>Nelson Mandela</footer>
     </blockquote>
-</div>
+</div>*@
 
 <div class="row">
     <div class="col-md-4">
