--- a/HeartOfGold/Views/Shared/_LoginPartial.cshtml
+++ b/HeartOfGold/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,19 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>
+            <a href="@Url.Action("Register", "Account")" id="registerLink">
+                <i class="fas fa-user-circle" style="font-size: 1.2em"></i>
+                &nbsp;Register
+            </a>
+        </li>
+        @*<li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
+        @*<li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
+
+        <li>
+            <a href="@Url.Action("Login", "Account")" id="registerLink">
+                <i class="fas fa-sign-in-alt" style="font-size:1.1em"></i>
+                &nbsp;Log in
+            </a>
     </ul>
 }
