--- a/HeartOfGold/Content/MyCss.css
+++ b/HeartOfGold/Content/MyCss.css
@@ -100,5 +100,19 @@
     border-color: red;
 }
 
+.btn-big {
+    width: 100%;
+    padding: 10px;
+}
+
+.navbar-inverse .navbar-brand {
+    color: gold;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #f2f2f2
+}
+
+
 
 
