--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -12,8 +12,8 @@
     <p class="lead">Create a request for items that you need. You will be notified when we can help you.</p>
     <br />
     <a href="@Url.Action("SubmitRequest", "Request")" class="btn btn-primary btn-lg register-button">
-        <i class="fas fa-user-plus" style="font-size:1.2em"></i>
-        &nbsp;I want to submit a request!
+        <i class="fas fa-address-card" style="font-size:1.1em"></i>
+        &nbsp;&nbsp;Submit a request!
     </a>
 </div>
 <br />
@@ -45,3 +45,4 @@
         <p>We believe strongly in the philosophy of Ubuntu, we care about those that are disadvantaged. Let's help them out.</p>
     </div>
 </div>
+<hr />
